pages/primitives/docs/components/collapsible/0.0.7/index.mdx
---
title: Collapsible
name: collapsible
description: An interactive component which expands/collapses a panel.
aria: https://www.w3.org/TR/wai-aria-practices-1.2/#disclosure
features:
  - Full keyboard navigation.
  - Can be controlled or uncontrolled.
---

import { CollapsibleHero } from '../../../../../../components/Hero/CollapsibleHero';

<HeroSlot>
  <CollapsibleHero />
</HeroSlot>

## Installation

Install the component from your command line.

```bash
npm install @radix-ui/react-collapsible
```

## Anatomy

Import the components and piece the parts together.

```jsx
import * as Collapsible from '@radix-ui/react-collapsible';

export default () => (
  <Collapsible.Root>
    <Collapsible.Button />
    <Collapsible.Content />
  </Collapsible.Root>
);
```

## Basic example

Create your styled collapsible component from the primitive parts.

```jsx manual
// import { styled } from 'path-to/stitches.config';
import * as Collapsible from '@radix-ui/react-collapsible';

const StyledContent = styled(Collapsible.CollapsibleContent, {
  padding: 10,
  marginTop: 10,
  backgroundColor: 'gainsboro',
  borderRadius: 6,
});

export default () => (
  <Collapsible.Root>
    <Collapsible.Button>Button</Collapsible.Button>
    <StyledContent>Content 1</StyledContent>
  </Collapsible.Root>
);
```

<Note>

**Note:** This example uses [Stitches](https://stitches.dev) but any styling solution is [compatible](../../overview/styling).

</Note>

## API Reference

### Root

Contains all the parts of a collapsible.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'defaultOpen',
      type: 'boolean',
      description:
        'The open state of the collapsible when it is initially rendered. Use when you do not need to control its open state.',
    },
    {
      name: 'open',
      type: 'boolean',
      description: (
        <span>
          The controlled open state of the collapsible. Must be used
          in conjunction with <Code>onOpenChange</Code>.
        </span>
      ),
    },
    {
      name: 'onOpenChange',
      type: '(open: boolean) => void',
      typeSimple: 'function',
      description:
        'Event handler called when the open state of the collapsible changes.',
    },
    {
      name: 'disabled',
      type: 'boolean',
      description: (
        <span>
          When <Code>true</Code>, prevents the user from interacting
          with the collapsible.
        </span>
      ),
    },
  ]}
/>

### Button

The button that toggles the collapsible.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'button',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
  ]}
/>

### Content

The component that contains the collapsible content.

<PropsTable
  data={[
    {
      name: 'as',
      required: false,
      type: 'keyof JSX.IntrinsicElements | React.ComponentType<any>',
      typeSimple: 'enum',
      default: 'div',
      description:
        'Change the component to a different HTML tag or custom component. This will merge the original component props with the props of the supplied element/component and change the underlying DOM node.',
    },
    {
      name: 'forceMount',
      type: 'boolean',
      description:
        'Used to force mounting when more control is needed. Useful when controlling animation with React animation libraries.',
    },
  ]}
/>

## Styling

### Animating content height

We expose a CSS custom property `--radix-collapsible-content-height`.<br />Use it to animate the height of the content when it opens/closes.

```jsx
const slideDown = css.keyframes({
  from: { height: 0 },
  to: { height: 'var(--radix-collapsible-content-height)' },
});

const slideUp = css.keyframes({
  from: { height: 'var(--radix-collapsible-content-height)' },
  to: { height: 0 },
});

const StyledContent = styled(Collapsible.Content, {
  '&[data-state="open"]': {
    animation: `${slideDown} 300ms ease-out`,
  },
  '&[data-state="closed"]': {
    animation: `${slideUp} 300ms ease-out`,
  },
});
```

## Accessibility

Adheres to the [Disclosure WAI-ARIA design pattern](https://www.w3.org/TR/wai-aria-practices-1.2/#disclosure).

### Keyboard Interactions

<KeyboardTable
  data={[
    {
      keys: ['Space'],
      description: 'Opens/closes the collapsible.',
    },
    {
      keys: ['Enter'],
      description: 'Opens/closes the collapsible.',
    },
  ]}
/>
